Add context to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<h1>Hello World!</h1>
-<h2>Hello Space!</h2>
-<h3>How Are You Doing World?</h3>
-<h4>Im Doing Great Space...</h4>
-<h5>How Are You Doing Space?</h5>
-<h6>Im Doing Wonderful World</h6>
+Workhsop Todo List
+Make the curriculum 4 pomodoros
+Buy workshop supplies 3 pomodoros
+Meet with the volunteer trainers 2 pomodoros
+Order food for Saturday and Sunday 1 pomodoros
+Check pre-work assignments 2 pomodoros
+Send workshop location to all the students 1 pomodoros
+Have a great workshop 0 pomodoros
+Add todo
