--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
      <title>Todo List Application</title>
   </head>
   <body>
-    Workhsop Todo List
-    Make the curriculum 4 pomodoros
-    Buy workshop supplies 3 pomodoros
-    Meet with the volunteer trainers 2 pomodoros
-    Order food for Saturday and Sunday 1 pomodoros
-    Check pre-work assignments 2 pomodoros
-    Send workshop location to all the students 1 pomodoros
-    Have a great workshop 0 pomodoros
-    Add todo
+    <h1>Workhsop Todo List</h1>
+    <ul>
+      <li>
+        <input type="checkbox">
+        Make the curriculum 4 pomodoros
+      </li>
+      <li>
+        <input type="checkbox">
+        Buy workshop supplies 3 pomodoros
+      </li>
+      <li>
+        <input type="checkbox">
+        Meet with the volunteer trainers 2 pomodoros
+      </li>
+      <li>
+        <input type="checkbox">
+        Order food for Saturday and Sunday 1 pomodoros
+      </li>
+      <li>
+        <input type="checkbox">
+        Check pre-work assignments 2 pomodoros
+       </li>
+       <li>
+       <input type="checkbox">
+        Send workshop location to all the students 1 pomodoros
+       </li>
+       <li>
+        <input type="checkbox">
+        Have a great workshop 0 pomodoros
+      </li>
+     </ul>
   </body>
 </html>
