add and tag content for shw page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <ul>
       <li>
         <input type="checkbox">
-        Make the curriculum 4 pomodoros
+        <a href="show.html">Make the curriculum</a> 4 pomodoros
       </li>
       <li>
         <input type="checkbox">
