--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
      <title>Todo List Application</title>
+     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Workhsop Todo List</h1>
+    <h1>Workshop Todo List</h1>
     <ul>
       <li>
         <input type="checkbox">
